--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -1,26 +1,21 @@
-// @import '/_colors'
-@use '/_colors'
+@import './_colors'
 
 h1
     font-size: 1.5rem
     font-weight: bold
     line-height: 1.2
     margin-bottom: 0.5rem
-    color: _colors.$blue
+    color: $green
 
 h2
     font-size: 1.25rem
     font-weight: bold
     line-height: 1.2
     margin-bottom: 0.5rem
-    color: _colors.$blue
+    color: $green
 
 p
     font-size: 1rem
     line-height: 1.5
     margin-bottom: 1rem
-    color: _colors.$foreground
-
-article
-    margin-bottom: 2rem
-    color: _colors.$foreground
+    color: $brightCyan
