+change, +styles, +themes
.gitignore file, a few styles,test themes that'll probably not be used and thats about it

--- a/src/sass/base/_colors.sass
+++ b/src/sass/base/_colors.sass
@@ -18,3 +18,16 @@ $red: #BF616A
 $selectionBackground: #D6DAE0
 $white: #ECEFF4
 $yellow: #C19C00
+
+// Nord
+$blue-gray-darkest: #2e3440
+$blue-gray-dark: #3b4252
+$blue-gray-light: #434c5e
+$blue-gray-lightest: #4c566a
+
+// Snow Storm
+$snow-storm: #d8dee9
+$snow-strom-light: #ccd3df
+$snow-storm-lightest: #edf2fa
+$snow-storm-dark: #b4bccc
+$snow-storm-darkest: #adbac4
