--- a/src/sass/page/_index.sass
+++ b/src/sass/page/_index.sass
@@ -3,3 +3,12 @@
 body
     color: $foreground
     text-align: center
+
+nav, ul, li, a
+    color: $iceblue
+    font-family: Courier New, Courier, monospace
+    font-size: 1.2em
+    list-style: none
+    text-decoration: none
+    &:hover
+        color: $ice
