--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,3 +1,5 @@
 @import './base/_colors'
 @import './base/_typography'
 @import './page/_index'
+@import './theme/blue-gray'
+@import './theme/snow-storm'
