[+version, +changes, +icon, +component, -todo
Updated to version 1.0.1, made a few changes here and there, added an icon, added a component, completed a todo

--- a/src/sass/components/_navbar.sass
+++ b/src/sass/components/_navbar.sass
@@ -1,8 +1,4 @@
-@import '../base/_colors'
-
-body
-    color: $foreground
-    text-align: center
+@import '../base/_colors.sass'
 
 nav, ul, li, a
     color: $iceblue
