--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,5 +1,5 @@
 @import './base/_colors'
 @import './base/_typography'
-@import './page/_index'
-@import './theme/blue-gray'
-@import './theme/snow-storm'
+@import './pages/_index'
+@import './themes/_blue-gray'
+@import './themes/_snow-storm'
