--- a/src/sass/themes/_snow-storm.sass
+++ b/src/sass/themes/_snow-storm.sass
@@ -1,17 +1,17 @@
 @import '../base/_colors'
 
-.blue-gray
-    background: $blue-gray-darkest
+.snow-storm
+    background: $snow-storm-dark
     font-family: Courier New, Courier, monospace
     font-size: 1.2em
     width: 100%
     height: 100%
-    color: $blue-gray-dark
+    color: $snow-storm-darkest
     &, h1, p
-        color: $darkiceblue
+        color: $iceblue
     &, nav, ul, li, a
-        color: $blue-gray-light
+        color: $snow-strom-light
         list-style: none
         text-decoration: none
         &:hover
-            color: $blue-gray-lightest
+            color: $snow-storm-lighsoh
