--- a/src/sass/base/_colors.sass
+++ b/src/sass/base/_colors.sass
@@ -23,11 +23,11 @@ $yellow: #C19C00
 $blue-gray-darkest: #2e3440
 $blue-gray-dark: #3b4252
 $blue-gray-light: #434c5e
-$blue-gray-lightest: #4c566a
+$blue-gray-lighsoh: #4c566a
 
 // Snow Storm
 $snow-storm: #d8dee9
 $snow-strom-light: #ccd3df
-$snow-storm-lightest: #edf2fa
+$snow-storm-lighsoh: #edf2fa
 $snow-storm-dark: #b4bccc
 $snow-storm-darkest: #adbac4
