--- a/src/sass/themes/_blue-gray.sass
+++ b/src/sass/themes/_blue-gray.sass
@@ -1,17 +1,17 @@
 @import '../base/_colors'
 
-.snow-storm
-    background: $snow-storm-dark
+.blue-gray
+    background: $blue-gray-darkest
     font-family: Courier New, Courier, monospace
     font-size: 1.2em
     width: 100%
     height: 100%
-    color: $snow-storm-darkest
+    color: $blue-gray-dark
     &, h1, p
-        color: $iceblue
+        color: $darkiceblue
     &, nav, ul, li, a
-        color: $snow-strom-light
+        color: $blue-gray-light
         list-style: none
         text-decoration: none
         &:hover
-            color: $snow-storm-lightest
+            color: $blue-gray-lighsoh
