--- a/src/sass/themes/_blue-gray.sass
+++ b/src/sass/themes/_blue-gray.sass
@@ -14,4 +14,4 @@
         list-style: none
         text-decoration: none
         &:hover
-            color: $blue-gray-lighsoh
+            color: $blue-gray-lightest
