--- a/src/sass/themes/_snow-storm.sass
+++ b/src/sass/themes/_snow-storm.sass
@@ -10,8 +10,8 @@
     &, h1, p
         color: $iceblue
     &, nav, ul, li, a
-        color: $snow-strom-light
+        color: $snow-storm-light
         list-style: none
         text-decoration: none
         &:hover
-            color: $snow-storm-lighsoh
+            color: $snow-storm-lightest
