--- a/src/sass/base/_colors.sass
+++ b/src/sass/base/_colors.sass
@@ -1,11 +1,11 @@
-$background: #D7E4F2
+$background: #8b9caf
 $black: #000000
 $blue: #2E3440
 $ice: #D8DEE9
 $iceblue: #434C5E
 $darkiceblue: #4C566A
-$brightGreen: #8C977D
-$brightPurple: #3B4252
+$brightGreen: #b8c5a7
+$darkblue: #3B4252
 $brightRed: #D08770
 $brightWhite: #FBFEFF
 $brightYellow: #EBCB8B
@@ -23,11 +23,11 @@ $yellow: #C19C00
 $blue-gray-darkest: #2e3440
 $blue-gray-dark: #3b4252
 $blue-gray-light: #434c5e
-$blue-gray-lighsoh: #4c566a
+$blue-gray-lightest: #4c566a
 
 // Snow Storm
 $snow-storm: #d8dee9
-$snow-strom-light: #ccd3df
-$snow-storm-lighsoh: #edf2fa
+$snow-storm-light: #ccd3df
+$snow-storm-lightest: #edf2fa
 $snow-storm-dark: #b4bccc
 $snow-storm-darkest: #adbac4
