--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -1,18 +1,19 @@
 @import './_colors'
 
 h1
-    font-size: 1.5rem
+    font-size: 2.5em
+    font-family: Courier New, Courier, monospace
     font-weight: bold
     line-height: 1.2
     margin-bottom: 0.5rem
-    color: $green
+    color: $brightGreen
 
 h2
     font-size: 1.25rem
     font-weight: bold
     line-height: 1.2
     margin-bottom: 0.5rem
-    color: $green
+    color: $brightGreen
 
 p
     font-size: 1rem
