--- a/src/sass/components/_navbar.sass
+++ b/src/sass/components/_navbar.sass
@@ -1,10 +1,29 @@
 @import '../base/_colors.sass'
 
-nav, ul, li, a
-    color: $iceblue
-    font-family: Courier New, Courier, monospace
-    font-size: 1.2em
+nav
+    justify-content: space-between
+    font-family: monospace
+    font-size: 1.5rem
+    padding: 0.5em
+    & > *
+        margin: 0 0.5em
+
+ul
+    margin: 0
+    padding: 0
+    & > *
+        margin: 0 0.5em
+        &:hover
+            color: $snow-storm-darkest
+            cursor: pointer
+            & > *
+                color: $snow-storm-darkest
+
+li
     list-style: none
-    text-decoration: none
     &:hover
-        color: $ice
+        color: $snow-storm-darkest
+
+a
+    color: $snow-storm-lightest
+    text-decoration: none
