+version, +styles, +pages, -todo, -dir, +changes
Updated to version 1.0.2, added styles removed styles, changes in pages, finished a todo, got rid of the public directory and made a changes here and there

--- a/src/sass/base/_colors.sass
+++ b/src/sass/base/_colors.sass
@@ -1,33 +1,44 @@
-$background: #8b9caf
+// soh
+$background: #7ba8a1a2
+$nav: #4C566A
+$link: #5E81AC
+$paragraph: #54835d
+$header: #8aa68f
+$main: #ebd58b
+$border: #434c5e
+$footer: #bf6161
+
+// Nord
+$background-n: #8b9caf
 $black: #000000
-$blue: #2E3440
+$blue: #313d53
 $ice: #D8DEE9
-$iceblue: #434C5E
+$iceblue: #434c5e
 $darkiceblue: #4C566A
-$brightGreen: #b8c5a7
-$darkblue: #3B4252
-$brightRed: #D08770
+$brightGreen: #a7c5ab
+$darkblue: #1c2333
+$brightRed: #d07070
 $brightWhite: #FBFEFF
-$brightYellow: #EBCB8B
+$brightYellow: #ebd58b
 $brightblue: #5E81AC
 $cyan: #88C0D0
 $foreground: #ECF3FF
-$green: #8AA6A2
+$green: #8aa68f
 $pink: #B48EAD
-$red: #BF616A
+$red: #bf6161
 $selectionBackground: #D6DAE0
 $white: #ECEFF4
 $yellow: #C19C00
 
-// Nord
-$blue-gray-darkest: #2e3440
-$blue-gray-dark: #3b4252
-$blue-gray-light: #434c5e
-$blue-gray-lightest: #4c566a
+// Blue Gray
+$blue-gray-darkest: #2d3341
+$blue-gray-dark: #2a303f
+$blue-gray-light: #4b5363
+$blue-gray-lightest: #636b7c
 
 // Snow Storm
-$snow-storm: #d8dee9
-$snow-storm-light: #ccd3df
-$snow-storm-lightest: #edf2fa
-$snow-storm-dark: #b4bccc
-$snow-storm-darkest: #adbac4
+$snow-storm: #9ca7bb
+$snow-storm-light: #afb9ce
+$snow-storm-lightest: #d6dce4
+$snow-storm-dark: #929db3
+$snow-storm-darkest: #8a9caa
