--- a/src/sass/pages/_home.sass
+++ b/src/sass/pages/_home.sass
@@ -1,6 +1,6 @@
 @import '../base/_colors'
 
-body
+.home
     color: $foreground
     text-align: center
-    background-color: $darkiceblue
+    background-image: ("../../assets/soh.jpg")
