--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,6 +1,7 @@
 @import './base/_colors'
-@import './base/_typography'
-@import './pages/_index'
+// @import './base/_typography'
 @import './themes/_blue-gray'
 @import './themes/_snow-storm'
 @import './components/_navbar'
+@import './pages/_about'
+@import './pages/_home'
