--- a/src/sass/themes/_blue-gray.sass
+++ b/src/sass/themes/_blue-gray.sass
@@ -9,6 +9,7 @@
     color: $blue-gray-dark
     &, h1, p
         color: $darkiceblue
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     &, nav, ul, li, a
         color: $blue-gray-light
         list-style: none
