--- a/src/sass/themes/_snow-storm.sass
+++ b/src/sass/themes/_snow-storm.sass
@@ -9,6 +9,7 @@
     color: $snow-storm-darkest
     &, h1, p
         color: $iceblue
+        font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif
     &, nav, ul, li, a
         color: $snow-storm-light
         list-style: none
